# airwallex-rs

./: Cargo.toml  README.md  schema.json
examples/: get_balances.rs
src/: client.rs  config.rs  error.rs  lib.rs  webhooks.rs
src/auth/: mod.rs  token.rs
src/models/: account_capabilities.rs  accounts.rs  balances.rs  batch_transfers.rs  beneficiaries.rs  common.rs  connected_account_transfers.rs  conversion_amendments.rs  conversions.rs  customers.rs  deposits.rs  financial_transactions.rs  global_accounts.rs  invoices.rs  issuing_authorizations.rs  issuing_cardholders.rs  issuing_cards.rs  issuing_config.rs  issuing_transaction_disputes.rs  issuing_transactions.rs  linked_accounts.rs  mod.rs  payers.rs  payment_attempts.rs  payment_config.rs  payment_consents.rs  payment_disputes.rs  payment_intents.rs  payment_links.rs  payment_methods.rs  reconciliation.rs  reference_data.rs  refunds.rs  settlements.rs  transfers.rs
src/resources/: account_capabilities.rs  accounts.rs  balances.rs  batch_transfers.rs  beneficiaries.rs  connected_account_transfers.rs  conversion_amendments.rs  conversions.rs  customers.rs  deposits.rs  financial_transactions.rs  global_accounts.rs  invoices.rs  issuing_authorizations.rs  issuing_cardholders.rs  issuing_cards.rs  issuing_config.rs  issuing_transaction_disputes.rs  issuing_transactions.rs  linked_accounts.rs  mod.rs  payers.rs  payment_attempts.rs  payment_config.rs  payment_consents.rs  payment_disputes.rs  payment_intents.rs  payment_links.rs  payment_methods.rs  reconciliation.rs  reference_data.rs  (+3 more)
tests/: integration.rs
