[package]
name = "airwallex-rs"
version = "0.1.0"
edition = "2024"
description = "Rust client for the Airwallex REST API"
license = "MIT"
repository = "https://github.com/paraplu/airwallex-rs"
keywords = ["airwallex", "payments", "api", "fintech"]
categories = ["api-bindings", "web-programming"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
url = "2"
dotenvy = "0.15"
async-trait = "0.1"
hmac = "0.12.1"
sha2.workspace = true
hex = "0.4.3"
base64 = "0.22.1"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber.workspace = true
wiremock = "0.6"
